# mygisbi

./: .gitignore  pyproject.toml  readme.md
datasets/: ~$实训项目42：财政公共收入明细表.xlsx  实训项目10：黄金价格预测.xlsx  实训项目12：国家财政收入影响因素分析.xlsx  实训项目13：2021年一般公共预算主要支出项目.xlsx  实训项目13：2021年一般公共预算主要收入项目.xlsx  实训项目13：全国一般公共预算收支总额及增长速度.xlsx  实训项目13：全国税收收入与非税收收入数据.xlsx  实训项目14：一带一路沿线国家及地区对外承包工程.xlsx  实训项目14：一带一路沿线国家及地区月进出口额.xlsx  实训项目14：一带一路沿线国家及地区非金融类对外直接投资.xlsx  实训项目15：银行信用贷款需求预测.xlsx  实训项目16：证券产品趋势预测.xlsx  实训项目17：保险产品关联推荐.csv  实训项目18：股票量化分析.csv  实训项目19：金融舆情监测分析.xlsx  实训项目20：利用决策树制定采购方案.xlsx  实训项目21：利用时间序列预测销售额.xlsx  实训项目22：电商卖家库存需求预测.xlsx  实训项目23：会员聚类分析提升转化率.xlsx  实训项目24：RFM分析与精准客户营销.xlsx  实训项目25：有效简历识别.xlsx  实训项目26：绩效结果量化分析.xlsx  实训项目27：人力需求预测.xlsx  实训项目28：人力资源管理三大报表分析.xlsx  实训项目29： 制定财务预算.xlsx  实训项目30 ： 企业偷税漏税识别.csv  实训项目31：个人收支异常判别.xlsx  实训项目32：利润表.xlsx  实训项目32：现金流量表.xlsx  实训项目32：资产负债表.xlsx  实训项目33：基于PSM的定价策略.xlsx  实训项目34：粉丝画像分析.xlsx  实训项目35：客户流失预测.xlsx  实训项目36：平台用户的历史浏览记录.xlsx  实训项目36：新用户的浏览记录.xlsx  实训项目37：供应商质量等级.xlsx  实训项目38：报关差错识别.xlsx  实训项目39：2003-2021年货物进出口总额.xlsx  实训项目39：2021.1-2022.9月进出口货物总额.xlsx  实训项目39：2021年同各国进出口总额.xlsx  (+13 more)
frp/: frpc.toml  frpc_vpn.toml
frp/config/: frpc-desktop.toml
server/: blog_ops  db  main.py  meta.ini
server/config/: config.py  env.py
server/domain/bidata/: api.py  models.py  schema.py
server/domain/bidata/migrations/: 0001_initial.py  0002_bidata_memo_bidata_type_alter_bidata_content.py
server/domain/blog/: api.py
server/domain/blog/migrations/: 0001_initial.py
